--- a/1.html
+++ b/1.html
@@ -48,9 +48,9 @@ background-color:pink;
 <a class=largesize href="http://www.edhitch.com/start.jsp" target=_blank> ABOUT US </a>
 <p>  This paragraph is bold
 
-this paragraph is bold
+This paragraph is bold
 
-this font is 500 weight  </p>
+this font is not 500 weight  </p>
 </div>
 </body>
 </html>
