--- a/1.html
+++ b/1.html
@@ -50,7 +50,7 @@ background-color:red;
 
 This paragraph is bold
 
-this font is not 500 weight  </p>
+this font 500 weight  </p>
 </div>
 </body>
 </html>
